--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
   "editor.insertSpaces": true,
   "editor.codeActionsOnSave": {
     "source.fixAll": true,
+    "source.fixAll.eslint": true,
     "source.organizeImports": true
   },
   "editor.rulers": [
@@ -24,6 +25,7 @@
   // typescript
   "typescript.format.semicolons": "remove",
   "typescript.preferences.quoteStyle": "single",
+  "typescript.format.insertSpaceBeforeFunctionParenthesis": true,
   // barrelr
   "barrelr.lineEnding": "LF",
   "barrelr.useDoubleQuotes": false,
