--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -20,6 +20,7 @@
     "@typescript-eslint"
   ],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "space-before-function-paren": "off"
   }
 }
