--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,14 @@
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/express": "^4.17.13",
+    "@types/express-winston": "^4.0.0",
     "@types/joi": "^17.2.3",
     "@types/mocha": "^9.1.0",
     "@types/mysql": "^2.15.21",
-    "@types/node": "^17.0.24",
+    "@types/node": "^17.0.33",
     "@types/sequelize": "^4.28.11",
     "@types/sinon": "^10.0.11",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "chai": "^4.3.6",
@@ -46,7 +48,9 @@
   "dependencies": {
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
+    "express-winston": "^4.2.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.19.0"
+    "sequelize": "^6.19.0",
+    "winston": "^3.7.2"
   }
 }
