--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "install": "npm i --prefix ./backend && npm i --prefix ./frontend",
     "start": "concurrently \"npm run start:backend\" \"npm run start frontend\"",
     "start:backend": "cd backend && npm start",
-    "start:frontend": "cd frontend && npm start"
+    "start:frontend": "cd frontend && npm start",
+    "compose": "docker-compose down && docker-compose up --force-recreate"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/leandroluk/todo-list#readme",
   "devDependencies": {
+    "@types/node": "^17.0.33",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
