removendo auto indent

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,16 @@
     "editor.quickSuggestions": {
       "strings": true
     }
+  },
+  "[dockercompose]": {
+    "editor.formatOnSave": false,
+    "editor.formatOnPaste": false,
+    "editor.insertSpaces": true,
+    "editor.tabSize": 2,
+    "editor.quickSuggestions": {
+      "other": true,
+      "comments": false,
+      "strings": true
+    }
   }
 }
