--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,7 @@ services:
     ports:
       - 3306:3306
     healthcheck:
-      test:
-        [
-          "CMD",
-          "mysqladmin",
-          "ping",
-          "-h",
-          "localhost",
-          "-proot"
-        ]
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-proot" ]
       timeout: 10s
       retries: 10
 
