--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "build": "rimraf dist && tsc -p ./tsconfig-build.json",
     "serve": "npm run build && node ./dist",
-    "start": "node -r ts-node/register src",
+    "start": "node -r ts-node/register -r tsconfig-paths/register src",
     "lint": "eslint . --fix",
-    "watch": "nodemon --ext ts --watch src --exec ts-node src",
+    "watch": "nodemon --ext ts --watch src --exec \"ts-node -r tsconfig-paths/register\" src",
     "db": "sequelize db:drop && sequelize db:create && sequelize db:migrate",
-    "test": "mocha -r ts-node/register tests/**/*.test.ts --exit -t 60000",
+    "test": "mocha -r ts-node/register -r tsconfig-paths/register tests/**/*.{spec,test}.ts --exit -t 60000",
     "test:coverage": "nyc npm run test"
   },
   "keywords": [],
@@ -20,8 +20,10 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/express-winston": "^4.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/joi": "^17.2.3",
     "@types/mocha": "^9.1.0",
     "@types/mysql": "^2.15.21",
@@ -34,6 +36,7 @@
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "eslint": "^8.13.0",
+    "express-winston": "^4.2.0",
     "jest": "^27.5.1",
     "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
@@ -43,12 +46,14 @@
     "sinon": "^13.0.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
-    "express-winston": "^4.2.0",
+    "helmet": "^5.1.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0",
     "winston": "^3.7.2"
