--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src",
   "scripts": {
     "build": "rimraf dist && tsc -p ./tsconfig-build.json",
     "serve": "npm run build && node ./dist",
