subindo novas configs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,6 @@
       "strings": true
     }
   },
-  "thunder-client.saveToWorkspace": true
+  "thunder-client.saveToWorkspace": true,
+  "thunder-client.workspaceRelativePath": "./backend"
 }
