--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   mysql:
     container_name: todo-list-mysql
+    platform: linux/amd64
     image: mysql:5
     environment:
       MYSQL_ROOT_PASSWORD: "root"
