--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "backend"]
 	path = backend
 	url = https://github.com/leandroluk/todo-list-backend.git
+	branch = master
 [submodule "frontend"]
 	path = frontend
 	url = https://github.com/leandroluk/todo-list-frontend.git
+	branch = master
